# lib-cp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
algo/compress/: Cargo.toml
algo/compress/src/: lib.rs
algo/hilbert_sort/: Cargo.toml
algo/hilbert_sort/src/: lib.rs
algo/radix_sort/: Cargo.toml
algo/radix_sort/benches/: sort_integer.rs
algo/radix_sort/src/: lib.rs
algo/ska_sort/: Cargo.toml
algo/ska_sort/src/: lib.rs
ds/disjoint_sparse_table/: Cargo.toml
ds/disjoint_sparse_table/src/: lib.rs
ds/fenwick/: Cargo.toml
ds/fenwick/src/: lib.rs
ds/lazy_segtree/: Cargo.toml
ds/lazy_segtree/src/: lib.rs
ds/rectangle/: Cargo.toml
ds/rectangle/src/: lib.rs
ds/rmq/: Cargo.toml
ds/rmq/src/: lib.rs
ds/rollback_union_find/: Cargo.toml
ds/rollback_union_find/src/: lib.rs
ds/segtree/: Cargo.toml
ds/segtree/src/: lib.rs
ds/simd_bit/: Cargo.toml
ds/simd_bit/src/: lib.rs
ds/sparse_table/: Cargo.toml
ds/sparse_table/src/: lib.rs
ds/union_find/: Cargo.toml
ds/union_find/src/: lib.rs
ds/union_find_with_potential/: Cargo.toml
ds/union_find_with_potential/src/: lib.rs
fps/fps/: Cargo.toml
fps/fps/src/: lib.rs
geo/convex_hull/: Cargo.toml
geo/convex_hull/src/: lib.rs
geo/point/: Cargo.toml
geo/point/src/: lib.rs
graph/bipartite/: Cargo.toml
graph/bipartite/src/: lib.rs
graph/csr/: Cargo.toml
graph/csr/src/: lib.rs
graph/csr2/: Cargo.toml
graph/csr2/src/: lib.rs
graph/lca/: Cargo.toml
graph/lca/src/: lib.rs
graph/scc/: Cargo.toml
graph/scc/src/: lib.rs
graph/tree_dp/: Cargo.toml
graph/tree_dp/src/: lib.rs
graph2/csr2/src/: lib.rs
graph2/lca2/: Cargo.toml
graph2/lca2/src/: lib.rs
graph2/scc2/: Cargo.toml
graph2/scc2/src/: lib.rs
graph2/search/: Cargo.toml
graph2/search/src/: lib.rs
io/from_bytes/: Cargo.toml
io/from_bytes/src/: lib.rs
io/input/: Cargo.toml
io/input/src/: lib.rs
io/macros/: Cargo.toml
io/macros/src/: lib.rs
io/output/: Cargo.toml
io/output/src/: lib.rs
io/reader/: Cargo.toml
io/reader/src/: lib.rs
math/factorial/: Cargo.toml
math/factorial/src/: lib.rs
math/floor_sum/: Cargo.toml
math/floor_sum/src/: lib.rs
math/fps/: Cargo.toml
math/fps/src/: lib.rs
math/min_prime_factor/: Cargo.toml
math/min_prime_factor/src/: lib.rs
math/mint/: Cargo.toml
math/mint/src/: lib.rs
math/ops/: Cargo.toml
math/ops/src/: lib.rs
note/: ntt.typ  suffix_array.typ
playground/: Cargo.toml
playground/src/: main.rs
small/sorted_array/: Cargo.toml
small/sorted_array/src/: lib.rs
string/kmp/: Cargo.toml
string/kmp/src/: lib.rs
string/lcp/: Cargo.toml
string/lcp/src/: lib.rs
string/manacher/: Cargo.toml
string/manacher/src/: lib.rs
string/rolling_hash/: Cargo.toml
string/rolling_hash/src/: lib.rs
string/suffix_array/: Cargo.toml
string/suffix_array/src/: lib.rs
string/suffix_automaton/: Cargo.toml
string/suffix_automaton/src/: lib.rs
string/suffix_tree/: Cargo.toml
string/suffix_tree/src/: lib.rs
string/z_algorithm/: Cargo.toml
string/z_algorithm/src/: lib.rs
