[workspace]

# cargo-equipの対応待ち
resolver = "2"

members = [
    "ds/disjoint_sparse_table",
    "ds/fenwick",
    "ds/lazy_segtree",
    "ds/rmq",
    "ds/sparse_table",
    "ds/union_find", "fps/fps",
    "geo/convex_hull",
    "graph/bipartite",
    "graph/csr",
    "graph/lca",
    "graph/scc",
    "graph/tree_dp",
    "math/floor_sum",
    "math/mint",
    "math/ops",
    "playground",
    "string/rolling_hash",
    "string/z_algorithm",
]

[workspace.package]
# cargo-equipの対応待ち
edition = "2021"
rust-version = "1.89.0"
authors = ["qdot3"]

# AtCoder 2025/11 以降に利用できるクレート
[workspace.dependencies]
rustc-hash = "2.1.1"
itertools = "0.14.0"
rand = "0.9.2"
num = "0.4.3"
fixedbitset = "0.5.7"
thiserror = "2.0.16"
