[workspace]

# cargo-equipの対応待ち
resolver = "2"

members = [
    "ds/disjoint_sparse_table",
    "ds/fenwick",
    "ds/lazy_segtree",
    "ds/rmq",
    "ds/sparse_table",
    "ds/union_find",
    "fps/fps",
    "geo/convex_hull",
    "graph/bipartite",
    "graph/csr",
    "graph/lca",
    "graph/scc",
    "graph/tree_dp",
    "math/floor_sum",
    "math/mint",
    "math/ops",
    "playground",
    "small/sorted_array",
    "string/rolling_hash",
    "string/z_algorithm",
]

[workspace.package]
# cargo-equipの対応待ち
edition = "2021"
rust-version = "1.89.0"
authors = ["qdot3"]

# AtCoder 2025/11 以降に利用できるクレート
[workspace.dependencies]
rustc-hash = "2.1.1"
itertools = "0.14.0"
rand = "0.9.2"
num = "0.4.3"
fixedbitset = "0.5.7"
thiserror = "2.0.16"

# original crates
# `crate = { workspace = true }`の形式で利用する。フォルダ構造の変更しても、ここだけ直せばよい。
disjoint_sparse_table = { path = "./ds/disjoint_sparse_table" }
fenwick = { path = "./ds/fenwick" }
lazy_segtree = { path = "./ds/lazy_segtree" }
rmq = { path = "./ds/rmq" }
sparse_table = { path = "./ds/sparse_table" }
union_find = { path = "./ds/union_find" }

fps = { path = "./fps/fps" }

convex_hull = { path = "./geo/convex_hull" }

bipartite = { path = "./graph/bipartite" }
csr = { path = "./graph/csr" }
lca = { path = "./graph/lca" }
scc = { path = "./graph/scc" }
tree_dp = { path = "./graph/tree_dp" }

floor_sum = { path = "./math/floor_sum" }
mint = { path = "./math/mint" }
ops = { path = "./math/ops" }

sorted_array = { path = "./small/sorted_array" }
rolling_hash = { path = "./string/rolling_hash" }
z_algorithm = { path = "./string/z_algorithm" }
