[workspace]

# cargo-equipの対応待ち
resolver = "2"

members = [
    # cargo-equip (で利用されている cargo-metadata) で必要
    "ds/disjoint_sparse_table",
    "ds/fenwick",
    "ds/lazy_segtree",
    "ds/rmq",
    "ds/sparse_table",
    "ds/union_find",
    "ds/union_find_with_potential",
    "geo/convex_hull",
    "geo/point",
    "graph/bipartite",
    "graph/csr",
    "graph/csr2",
    "graph/lca",
    "graph/scc",
    "graph/tree_dp",
    "io/input",
    "io/from_bytes",
    "math/factorial",
    "math/floor_sum",
    "math/fps",
    "math/mint",
    "math/ops",
    "playground",
    "small/sorted_array",
    "string/rolling_hash",
    "string/z_algorithm",
    "string/kmp",
    "string/manacher", "string/suffix_array",
]

[workspace.package]
# cargo-equipの対応待ち
edition = "2021"
rust-version = "1.89.0"
authors = ["qdot3"]

[workspace.dependencies]
# AtCoder 2025/11 以降に利用できるクレート
rustc-hash = "2.1.1"
itertools = "0.14.0"
rand = "0.9.2"
num = "0.4.3"
fixedbitset = "0.5.7"
thiserror = "2.0.16"

# original crates
# `crate = { workspace = true }`の形式で利用する。フォルダ構造の変更しても、ここだけ直せばよい。
disjoint_sparse_table = { path = "./ds/disjoint_sparse_table" }
fenwick = { path = "./ds/fenwick" }
lazy_segtree = { path = "./ds/lazy_segtree" }
rmq = { path = "./ds/rmq" }
sparse_table = { path = "./ds/sparse_table" }
union_find = { path = "./ds/union_find" }
union_find_with_potential = { path = "ds/union_find_with_potential" }

convex_hull = { path = "./geo/convex_hull" }
point = { path = "./geo/point" }

bipartite = { path = "./graph/bipartite" }
csr = { path = "./graph/csr" }
# csr2 = { path = "./graph/csr2" } UC
lca = { path = "./graph/lca" }
scc = { path = "./graph/scc" }
tree_dp = { path = "./graph/tree_dp" }

factorial = { path = "./math/factorial" }
floor_sum = { path = "./math/floor_sum" }
fps = { path = "./math/fps" }
mint = { path = "./math/mint" }
ops = { path = "./math/ops" }

sorted_array = { path = "./small/sorted_array" }

rolling_hash = { path = "./string/rolling_hash" }
z_algorithm = { path = "./string/z_algorithm" }
kmp = { path = "./string/kmp" }
manacher = { path = "./string/manacher" }

input = { path = "./io/input" }
from_bytes = { path = "./io/from_bytes" }
