[package]
name = "playground"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# AtCoder 2025/11 以降に利用できるクレート
# cargo equip がバグるので、ここではバージョンを明記する。メンバーでは継承すればよい。
# 恐らく、一時的なワークスペースを作成する際に、この Cargo.toml を参照している。
rustc-hash = "2.1.1"
itertools = "0.14.0"
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.9.2"
num = "0.4.3"
fixedbitset = "0.5.7"
thiserror = "2.0.16"

# workspace members
convex_hull = { path = "../geo/convex_hull" }

bipartite = { path = "../graph/bipartite" }
csr = { path = "../graph/csr" }
lca = { path = "../graph/lca" }
scc = { path = "../graph/scc" }
tree_dp = { path = "../graph/tree_dp" }

disjoint_sparse_table = { path = "../ds/disjoint_sparse_table" }
sparse_table = { path = "../ds/sparse_table" }
rmq = { path = "../ds/rmq" }

fenwick = { path = "../ds/fenwick" }
lazy_segtree = { path = "../ds/lazy_segtree" }
union_find = { path = "../ds/union_find" }

ops = { path = "../math/ops" }
mint = { path = "../math/mint" }
floor_sum = { path = "../math/floor_sum" }

fps = { path = "../fps/fps" }

rolling_hash = { path = "../string/rolling_hash" }
z_algorithm = { path = "../string/z_algorithm" }
