[package]
name = "playground"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# AtCoder 2025/11 以降に利用できるクレート
# cargo equip がバグるので、ここではバージョンを明記する。メンバーは継承すればよい。
# 恐らく、一時的なワークスペースを作成する際に、この Cargo.toml を参照している。
rustc-hash = "2.1.1"
itertools = "0.14.0"
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.9.2"
num = "0.4.3"
fixedbitset = "0.5.7"
thiserror = "2.0.16"

# workspace members
convex_hull = { workspace = true }
point = { workspace = true }

bipartite = { workspace = true }
csr = { workspace = true }
lca = { workspace = true }
scc = { workspace = true }
tree_dp = { workspace = true }

disjoint_sparse_table = { workspace = true }
sparse_table = { workspace = true }
rmq = { workspace = true }

fenwick = { workspace = true }
lazy_segtree = { workspace = true }
union_find = { workspace = true }
union_find_with_potential = { workspace = true }

factorial = { workspace = true }
floor_sum = { workspace = true }
fps = { workspace = true }
ops = { workspace = true }
mint = { workspace = true }

rolling_hash = { workspace = true }
z_algorithm = { workspace = true }
kmp = { workspace = true }

# from_bytes = { workspace = true }
# input = { workspace = true }
