[package]
name = "playground"
version = "0.1.0"
edition.workspace = true

[dependencies]
# AtCoder 2025/11 以降に利用できるクレート
# cargo equip がバグるので、ここではバージョンを明記する。メンバーは継承すればよい。
# 恐らく、一時的なワークスペースを作成する際に、この Cargo.toml を参照している。
rustc-hash = "2.1.1"
itertools = "0.14.0"
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.9.2"
num-bigint = "0.4.6"
# num-complex = "0.4.6"
num-derive = "0.4.2"
num-integer = "0.1.46"
# num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
# nalgebra = "0.34.0"
fixedbitset = "0.5.7"
thiserror = "2.0.16"

# my crates
lib-modulo = "0.8.1"

# crates from <https://github.com/qdot3/segtree>
segtree = { git = "https://github.com/qdot3/segtree", version="0.2.0" }
segtree_dual = { git = "https://github.com/qdot3/segtree", version="0.2.0" }
segtree_lazy = { git = "https://github.com/qdot3/segtree", version="0.1.1" }
segtree_traits = { git = "https://github.com/qdot3/segtree", package = "traits", version="0.1.0" }

op_add = { git = "https://github.com/qdot3/segtree", version="0.1.0" }
op_min = { git = "https://github.com/qdot3/segtree", version="0.1.0" }
op_max = { git = "https://github.com/qdot3/segtree", version="0.1.0" }
op_affine = { git = "https://github.com/qdot3/segtree", version="0.1.0" }

foldable_queue = { git = "https://github.com/qdot3/segtree", version="0.2.1" }
foldable_deque = { git = "https://github.com/qdot3/segtree", version="0.2.1" }
# END

# workspace members
hilbert_sort = { workspace = true }
compress.workspace = true

convex_hull = { workspace = true }
point = { workspace = true }

bipartite = { workspace = true }
csr = { workspace = true }
lca = { workspace = true }
scc = { workspace = true }
tree_dp = { workspace = true }

disjoint_sparse_table = { workspace = true }
sparse_table = { workspace = true }
rmq = { workspace = true }

fenwick = { workspace = true }
simd_bit = { workspace = true }
# lazy_segtree = { workspace = true }
# segtree = { workspace = true }
union_find = { workspace = true }
union_find_with_potential = { workspace = true }
rollback_union_find = { workspace = true }

rectangle = { workspace = true }

factorial = { workspace = true }
floor_sum = { workspace = true }
fps = { workspace = true }
ops = { workspace = true }
mint = { workspace = true }
min_prime_factor = { workspace = true }

rolling_hash = { workspace = true }
z_algorithm = { workspace = true }
kmp = { workspace = true }
manacher = { workspace = true }
suffix_array = { workspace = true }

from_bytes = { workspace = true }
input = { workspace = true }
output = { workspace = true }
